--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-Studio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +18,7 @@
 </head>
 
 <body>
+    <div class="container">
     <header class="header">
         <nav class="header-navigation">
             <a class="header-logo" href="./index.html" >Web<span class="header-logo-color">Studio</span></a>
@@ -173,6 +177,7 @@
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
     </footer>
+    </div>
 </body>
 
 </html>
