--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-    <div class="container">
     <header class="header">
+        <div class="container hero">
         <nav class="header-navigation">
             <a class="header-logo" href="./index.html" >Web<span class="header-logo-color">Studio</span></a>
             <ul class="header-menu-list">
@@ -35,16 +35,20 @@
                 <li><a class="address-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
 
     <main>
         <section class="main-page">
+            <div class="container">
             <h1 class="main-page-title">Effective Solutions
             for Your Business</h1>
             <button class="main-page-btn" type="button">Order Service</button>
+            </div>
         </section>
 
         <section class="feature">
+            <div class="container">
             <h2 class="visually-hidden">Advantages</h2>
             <ul class="feature-list">
                 <li class="feature-item">
@@ -68,9 +72,11 @@
                     <p class="feature-subtitle-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+            </div>
         </section>
 
         <section class="team">
+            <div class="container">
             <h2 class="team-subtitle">Our Team</h2>
             <ul class="team-list">
                 <li  class="team-item">
@@ -109,9 +115,11 @@
                     <p class="team-image-desc">"UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
 
         <section class="portfolio">
+        <div class="container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -168,16 +176,18 @@
                 <p class="portfolio-desc">Marketing</p>
             </li>
         </ul>
+        </div>
         </section>
 
     </main>
     <footer class="footer">
+        <div class="container">
                 <a href="./index.html" class="footer-logo">Web<span class="footer-logo-color">Studio</span></a>
                 <p class="footer-text">
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
+        </div>
     </footer>
-    </div>
 </body>
 
 </html>
