--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
 
         <section class="team">
-            <div class="container">
+            <div class="container team-container">
             <h2 class="team-subtitle">Our Team</h2>
             <ul class="team-list">
                 <li  class="team-item">
@@ -84,8 +84,10 @@
                     alt="Mark Guerrero"
                     width="264"
                     height="260">
+                    <div class="team-content">
                     <h3 class="team-image-subtitle">Mark Guerrero</h3>
                     <p class="team-image-desc">Product Designer</p>
+                    </div>
                 </li>
 
                 <li class="team-item">
@@ -93,8 +95,10 @@
                     alt="Tom Ford" 
                     width="264"
                     height="260">
+                    <div class="team-content">
                     <h3 class="team-image-subtitle">Tom Ford</h3>
                     <p class="team-image-desc">Frontend Developer</p>
+                    </div>
                 </li>
 
                 <li class="team-item">
@@ -102,8 +106,10 @@
                     alt="Camila Garcia"
                     width="264"
                     height="260">
+                    <div class="team-content">
                     <h3 class="team-image-subtitle">Camila Garcia</h3>
                     <p class="team-image-desc">Marketing</p>
+                    </div>
                 </li>
 
                 <li class="team-item">
@@ -111,15 +117,17 @@
                     alt="Daniel Wilson"
                     width="264"
                     height="260">
+                    <div class="team-content">
                     <h3 class="team-image-subtitle">Daniel Wilson</h3>
                     <p class="team-image-desc">"UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
         </section>
 
         <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-container">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -127,8 +135,10 @@
                 alt="Banking App" 
                 width="360"
                 height="300">
+                <div class="portfolio-content">
                 <h3 class="portfolio-text">Banking App</h3>
                 <p class="portfolio-desc">App</p>
+                </div>
             </li>
 
             <li class="portfolio-item">
@@ -136,8 +146,10 @@
                 alt="Cashless Payment" 
                 width="360"
                 height="300">
+                <div class="portfolio-content">
                 <h3 class="portfolio-text">Cashless Payment</h3>
                 <p class="portfolio-desc">Marketing</p>
+                </div>
             </li>
 
             <li class="portfolio-item">
@@ -145,8 +157,10 @@
                 alt="Meditation App" 
                 width="360" 
                 height="300">
+                <div class="portfolio-content">
                 <h3 class="portfolio-text">Meditation App</h3>
                 <p class="portfolio-desc">App</p>
+                </div>
             </li>
 
             <li class="portfolio-item">
@@ -154,8 +168,10 @@
                 alt="Taxi Service" 
                 width="360" 
                 height="300">
+                <div class="portfolio-content">
                 <h3 class="portfolio-text">Taxi Service</h3>
                 <p class="portfolio-desc">Marketing</p>
+                </div>
             </li>
 
             <li class="portfolio-item">
@@ -163,8 +179,10 @@
                 alt="Screen Illustrations" 
                 width="360" 
                 height="300">
+                <div class="portfolio-content">
                 <h3 class="portfolio-text">Screen Illustrations</h3>
                 <p class="portfolio-desc">Design</p>
+                </div>
             </li>
 
             <li class="portfolio-item">
@@ -172,8 +190,10 @@
                 alt="Online Courses" 
                 width="360"
                 height="300">
+                <div class="portfolio-content">
                 <h3 class="portfolio-text">Online Courses</h3>
                 <p class="portfolio-desc">Marketing</p>
+                </div>
             </li>
         </ul>
         </div>
@@ -181,7 +201,7 @@
 
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
                 <a href="./index.html" class="footer-logo">Web<span class="footer-logo-color">Studio</span></a>
                 <p class="footer-text">
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
