add error correction 25

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     problem to walk away with the perfect and creative solution.</p>
                 </li>
 
-                <li class="feature-item">
+                <li class="feature-item first">
                     <h3 class="feature-subtitle">Punctuality</h3>
                     <p class="feature-subtitle-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
@@ -131,6 +131,7 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-item">
+                <div  class="content-container">
                 <img class="portfolio-image" src="./images/Banking_App.jpg" 
                 alt="Banking App" 
                 width="360"
@@ -139,9 +140,11 @@
                 <h3 class="portfolio-text">Banking App</h3>
                 <p class="portfolio-desc">App</p>
                 </div>
+                </div>
             </li>
 
             <li class="portfolio-item">
+                <div class="content-container">
                 <img class="portfolio-image" src="./images/Cashless_Payment.jpg" 
                 alt="Cashless Payment" 
                 width="360"
@@ -150,9 +153,11 @@
                 <h3 class="portfolio-text">Cashless Payment</h3>
                 <p class="portfolio-desc">Marketing</p>
                 </div>
+                </div>
             </li>
 
             <li class="portfolio-item">
+                <div class="content-container">
                 <img class="portfolio-image" src="./images/Meditation_App.jpg" 
                 alt="Meditation App" 
                 width="360" 
@@ -161,9 +166,11 @@
                 <h3 class="portfolio-text">Meditation App</h3>
                 <p class="portfolio-desc">App</p>
                 </div>
+                </div>
             </li>
 
             <li class="portfolio-item">
+                <div class="content-container">
                 <img class="portfolio-image" src="./images/Taxi_Service.jpg" 
                 alt="Taxi Service" 
                 width="360" 
@@ -172,9 +179,11 @@
                 <h3 class="portfolio-text">Taxi Service</h3>
                 <p class="portfolio-desc">Marketing</p>
                 </div>
+                </div>
             </li>
 
             <li class="portfolio-item">
+                <div class="content-container">
                 <img class="portfolio-image" src="./images/Screen_Illustrations.jpg" 
                 alt="Screen Illustrations" 
                 width="360" 
@@ -183,9 +192,11 @@
                 <h3 class="portfolio-text">Screen Illustrations</h3>
                 <p class="portfolio-desc">Design</p>
                 </div>
+                </div>
             </li>
 
             <li class="portfolio-item">
+                <div class="content-container">
                 <img class="portfolio-image" src="./images/Online_Courses.jpg" 
                 alt="Online Courses" 
                 width="360"
@@ -193,6 +204,7 @@
                 <div class="portfolio-content">
                 <h3 class="portfolio-text">Online Courses</h3>
                 <p class="portfolio-desc">Marketing</p>
+                </div>
                 </div>
             </li>
         </ul>
