--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
 
         <section class="team">
-            <div class="container team-container">
+            <div class="container">
             <h2 class="team-subtitle">Our Team</h2>
             <ul class="team-list">
                 <li  class="team-item">
@@ -131,7 +131,6 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-item">
-                <div  class="content-container">
                 <img class="portfolio-image" src="./images/Banking_App.jpg" 
                 alt="Banking App" 
                 width="360"
@@ -140,11 +139,9 @@
                 <h3 class="portfolio-text">Banking App</h3>
                 <p class="portfolio-desc">App</p>
                 </div>
-                </div>
             </li>
 
             <li class="portfolio-item">
-                <div class="content-container">
                 <img class="portfolio-image" src="./images/Cashless_Payment.jpg" 
                 alt="Cashless Payment" 
                 width="360"
@@ -153,11 +150,9 @@
                 <h3 class="portfolio-text">Cashless Payment</h3>
                 <p class="portfolio-desc">Marketing</p>
                 </div>
-                </div>
             </li>
 
             <li class="portfolio-item">
-                <div class="content-container">
                 <img class="portfolio-image" src="./images/Meditation_App.jpg" 
                 alt="Meditation App" 
                 width="360" 
@@ -166,11 +161,9 @@
                 <h3 class="portfolio-text">Meditation App</h3>
                 <p class="portfolio-desc">App</p>
                 </div>
-                </div>
             </li>
 
             <li class="portfolio-item">
-                <div class="content-container">
                 <img class="portfolio-image" src="./images/Taxi_Service.jpg" 
                 alt="Taxi Service" 
                 width="360" 
@@ -179,24 +172,19 @@
                 <h3 class="portfolio-text">Taxi Service</h3>
                 <p class="portfolio-desc">Marketing</p>
                 </div>
-                </div>
             </li>
 
             <li class="portfolio-item">
-                <div class="content-container">
                 <img class="portfolio-image" src="./images/Screen_Illustrations.jpg" 
                 alt="Screen Illustrations" 
                 width="360" 
                 height="300">
                 <div class="portfolio-content">
                 <h3 class="portfolio-text">Screen Illustrations</h3>
-                <p class="portfolio-desc">Design</p>
-                </div>
                 </div>
             </li>
 
             <li class="portfolio-item">
-                <div class="content-container">
                 <img class="portfolio-image" src="./images/Online_Courses.jpg" 
                 alt="Online Courses" 
                 width="360"
@@ -204,7 +192,6 @@
                 <div class="portfolio-content">
                 <h3 class="portfolio-text">Online Courses</h3>
                 <p class="portfolio-desc">Marketing</p>
-                </div>
                 </div>
             </li>
         </ul>
