--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     problem to walk away with the perfect and creative solution.</p>
                 </li>
 
-                <li class="feature-item first">
+                <li class="feature-item">
                     <h3 class="feature-subtitle">Punctuality</h3>
                     <p class="feature-subtitle-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
