deleted the excess

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                 height="300">
                 <div class="portfolio-content">
                 <h3 class="portfolio-text">Screen Illustrations</h3>
-                </div>
+                <p class="portfolio-desc">Design</p>    
+            </div>
             </li>
 
             <li class="portfolio-item">
